# astrometry.net

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  CREDITS  Changelog  FAQ  GETTING-INDEXES  GETTING-INDICES  LICENSE  Makefile  PORTABILITY  README  README.in  README.md  __init__.py  configure  freebsd-notes  make-snapshot.sh  setup-libkd.py  setup.py
.circleci/: config.yml
UCAC3_guide/: README.txt  build-index.py  get_ucac3.py
app-engine-render/: app.yaml  hello.py  julia.py  png.py  runlocal.sh  tilesize.py
base/: Makefile  an-bool.h  an-endian.c  an-endian.h  an-opts.c  an-opts.h  an-thread.h  bl-nl.c  bl-nl.h  bl-nl.inc  bl-nl.ph  bl-sort.h  bl.c  bl.h  bl.inc  bt.c  bt.h  datalog.c  datalog.h  errors.h  fileutils.c  intmap.h  ioutils.c  ioutils.h  log.h  mathutil.c  mathutil.h  os-features-test.c  os-features.h  permutedsort.c  qsort_reentrant.c  sparsematrix.c  sparsematrix.h
base-advanced/: resample.h
blind/: 2mass-cut.py  2mass-fits.c  2mass-fits.h  2mass.c  2mass.h  2masstofits.c  Makefile  README  add-healpix-column.c  add-text.c  agreeable.c  allquads-main.c  allquads.c  allquads.h  an-fitstopnm.c  an_mm_malloc.h  anet.py  apod4.xy  augment-xylist-main.c  augment-xylist.c  augment-xylist.h  axyfile.h  backend-main.c  backend-old.c  backend.c  backend.h  backend2.c  backend_client.py  backend_daemon.py  bands.py  bgsubtract.c  blind-main.c  blind.c  blind.h  blind.i  blind_wcs.c  blind_wcs.h  blindutils.c  brightstars.c  build-an-catalog.c  (+331 more)
catalogs/: 2mass-fits.c  2mass.c  2masstofits.c  Makefile  NGC.csv  abell-all.fits  brightstars-data.c  brightstars-to-fits.py  brightstars.c  brightstars.fits  brightstars.h  brightstars.py  build-hd-tree.c  build_ucac5_indexes.sh  constellation-boundaries-data.c  constellation-boundaries.c  constellations.c  constellations.h  constellations.py  convert-openngc.py  convert-uzc.py  grab-stellarium-constellations.c  hd.c  ic2000.fits  ngc.sh  ngc2000-post.py  ngc2000-pre.py  ngc2000.c  ngc2000.fits  ngc2000.h  ngc2000.py  ngc2000accurate.py  ngc2000names.fits  ngc2000tofits.py  ngcic-accurate.c  ngcic-accurate.h  nomad-fits.c  nomad.c  nomadtofits.c  openngc-entries-c.awk  (+42 more)
cfitsio/: VERSION  buffers.c  cfileio.c  drvrfile.c  drvrmem.c  drvrnet.c  eval.l  eval.y  eval_f.c  eval_l.c  eval_tab.h  eval_y.c  fitscore.c  fitsio2.h  getcol.c  imcompress.c  iraffits.c  putcolu.c  putkey.c  swapproc.c  wcssub.c
crowfood/: .gitignore  Makefile  Makefile.rules  clusters_full  clusters_grouped  clusters_grouped_big  clusters_layered  create_graphs.sh  filters_full  filters_layered
cutest/: cutest.h
data/: ngc2000-readme.txt  ngc2000_pos.txt  uzc2000.fits
demo/: CREDITS  apod1.xyls  apod2.xyls  apod3.xyls  apod4.xyls  apod5.xyls  cfg  index-4119.fits  sdss.xyls  tycho2-mag6.fits
doc/: Makefile  an-cookbook.rst  api-util-py.rst  api.rst  backups.rst  build-index.rst  build.rst  changelog.rst  code.rst  conf.py  dev.rst  index.rst  install_astrometry_on_linux.sh  libkd.rst  net  nova.rst  oaq.rst  readme.rst
docker/: README.md
easy-gmaps/: README
etc/: astrometry.cfg  astrometry.cfg-dist  backend-test.cfg  backend.cfg  backend.cfg-dist
gsl-an/: Makefile  README  README.Astrometry.net  chol-demo.c  config.h.in  configure  dependencies.txt  grab-gsl-sources.sh  gsl_math.h  qr-demo.c  svd-demo.c  templates_on.h
include/: git.h
libkd/: AUTHORS  LICENSE  Makefile  Makefile.min  README  an-fls.h  checktree.c  demo.c  dualtree.c  (+60 more)
qfits-an/: AUTHORS  Makefile  Makefile.am  Makefile.in  NOTE-Astrometry.net  README  aclocal.m4  anqfits.c  anqfits.h  config.h  config.h.in  configure  configure.ac  fitsbin.c  fitsbin.h  fitsfile.c  fitsfile.h  fitsioutils.c  fitsioutils.h  fitstable.c  libtool  md5.c  md5.h  qfits.h  qfits_byteswap.c  qfits_card.c  qfits_config.h  qfits_convert.c  qfits_error.c  qfits_error.h  qfits_float.c  qfits_float.h  qfits_header.c  qfits_image.c  qfits_keywords.h  qfits_md5.c  qfits_memory.c  qfits_rw.c  qfits_rw.h  qfits_table.c  (+4 more)
qfits-an/admin/: html.am
qfits-an/doc/: Doxyfile.in
qfits-an/html/: annotated.html  classes.html  dir_000000.html  dirs.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  group__qfits__cache.html  group__qfits__filename.html  group__qfits__header.html  group__qfits__image.html  group__qfits__md5.html  group__qfits__memory.html  group__qfits__rw.html  group__qfits__table.html  group__qfits__time.html  group__qfits__tools.html  index.html  modules.html  qfits_8head.html  qfits__cache_8c.html  qfits__filename_8c.html  qfits__header_8c.html  qfits__image_8c.html  qfits__md5_8c.html  qfits__memory_8c.html  qfits__rw_8c.html  qfits__table_8c.html  qfits__time_8c.html  qfits__tools_8c.html  struct__keytuple__.html  struct__qfits__cache__cell__.html
qfits-an/m4macros/: eso.m4  qfits_memory.m4
qfits-an/main/: Makefile.am  Makefile.in  dfits.c  dtfits.c  flipx.c  frameq.c  qextract.c  replacekey.c
qfits-an/man/: Makefile.am  Makefile.in  dfits.1  dtfits.1  fitsmd5.1  fitsort.1  flipx.1  frameq.1  hierarch28.1  iofits.1  qextract.1  replacekey.1
qfits-an/saft/: Makefile.am  Makefile.in  fitsmd5.c  fitsort.c  hierarch28.c  iofits.c  stripfits.c
qfits-an/src/: Makefile  Makefile.am  Makefile.in  anqfits.c  anqfits.h  config.h  md5.c  md5.h  qfits.h  qfits_byteswap.c  qfits_cache.c  qfits_cache.h  qfits_card.c  qfits_card.h  qfits_convert.c  qfits_convert.h  qfits_error.c  qfits_error.h  qfits_filename.c  qfits_filename.h  qfits_float.c  qfits_float.h  qfits_header.c  qfits_header.h  qfits_image.c  qfits_image.h  qfits_md5.c  qfits_md5.h  qfits_memory.c  qfits_memory.h  qfits_rw.c  qfits_rw.h  qfits_std.h  qfits_table.c  qfits_table.h  qfits_thread.h  qfits_thread_pthreads.c  qfits_thread_pthreads.h  qfits_time.c  qfits_time.h  (+2 more)
qfits-an/test/: Makefile.am  Makefile.in  asciitable.tfits  bintable.tfits  pixset.h  test_fitsioutils.c  test_pixio.c  test_pixio.txt  test_qfits.c  test_qfits.txt  test_tfits.c  test_tfits.txt  test_xmem.c  test_xmem_stress.c
(+2015 files in other folders)
