AUTOMAKE_OPTIONS = 1.8 foreign
DISTCLEANFILES = *~

INCLUDES = -I$(top_srcdir)/src

LDADD = $(top_builddir)/src/libqfits.la

bin_PROGRAMS = dfits dtfits flipx frameq qextract replacekey

dfits_SOURCES = dfits.c
dtfits_SOURCES = dtfits.c
flipx_SOURCES = flipx.c
frameq_SOURCES = frameq.c
qextract_SOURCES = qextract.c
replacekey_SOURCES = replacekey.c
