AUTOMAKE_OPTIONS = 1.8 foreign
DISTCLEANFILES = *~

man1_MANS = \
	dtfits.1 \
	fitsort.1 \
	frameq.1 \
	iofits.1 \
	replacekey.1 \
	dfits.1 \
	fitsmd5.1 \
	flipx.1 \
	hierarch28.1 \
	qextract.1

EXTRA_DIST = \
	dtfits.1 \
	fitsort.1 \
	frameq.1 \
	iofits.1 \
	replacekey.1 \
	dfits.1 \
	fitsmd5.1 \
	flipx.1 \
	hierarch28.1 \
	qextract.1


# Files to be removed with command: make maintainer-clean
MAINTAINERCLEANFILES = Makefile.in
