AUTOMAKE_OPTIONS = 1.8 foreign
DISTCLEANFILES = *~

INCLUDES = -I$(top_srcdir)/src

LDADD = $(top_builddir)/src/libqfits.la

bin_PROGRAMS = fitsort iofits fitsmd5 hierarch28 stripfits

fitsort_SOURCES = fitsort.c
iofits_SOURCES = iofits.c
fitsmd5_SOURCES = fitsmd5.c
hierarch28_SOURCES = hierarch28.c
stripfits_SOURCES = stripfits.c
